cluster/apps/media/maintainerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
  namespace: maintainerr
  labels:
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: maintainerr
